<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/text_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_main"
            tools:context=".activity.MainActivity">
        <LinearLayout
                android:id="@+id/loading_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone"
        >
            <com.victor.loading.book.BookLoading
                    android:id="@+id/loading"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"/>
            <TextView
                    android:id="@+id/loading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:text="@string/sync_contribution_events"
            />
        </LinearLayout>

        <android.support.v7.widget.CardView
                android:id="@+id/settings_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardElevation="8dp"
                app:cardCornerRadius="7dp">
            <LinearLayout
                    android:id="@+id/status_board"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_margin"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/github_account_setup"
                        android:textColor="@color/text"
                        android:layout_marginBottom="@dimen/edit_margin"
                />
                <android.support.design.widget.TextInputLayout
                        android:id="@+id/form_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/edit_margin"
                >
                    <EditText
                            android:id="@+id/edit_name"
                            android:hint="@string/hint_name_for_call_users_api"
                            android:singleLine="true"
                            android:imeOptions="actionNext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:id="@+id/form_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/edit_margin">
                    <EditText
                            android:id="@+id/edit_email"
                            android:hint="@string/hint_email_for_commits_verification"
                            android:singleLine="true"
                            android:imeOptions="actionNext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:id="@+id/form_zone_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/edit_margin">
                    <EditText
                            android:id="@+id/edit_zone_id"
                            android:hint="@string/hint_zoneid_time_zone"
                            android:singleLine="true"
                            android:imeOptions="actionDone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </android.support.design.widget.TextInputLayout>
                <Button
                        android:id="@+id/register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>
</layout>
